--- a/src/main/resources/template/velocity/mybatis/3.0/SqlMap.vm
+++ b/src/main/resources/template/velocity/mybatis/3.0/SqlMap.vm
@@ -2,7 +2,7 @@
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
 <mapper namespace="${daoFullPackageName}.${sqlMapIDaoJavaClassName}">
 #set($i = 0)#set($j = 0)#set($H='#')
-<sql id="${queryPagingMethodPrefix}Condition">
+<select id="queryPaging" parameterType="java.util.Map" resultType="java.util.HashMap">
 	${entity.querySql}
 	<trim prefix="WHERE" prefixOverrides="AND |OR ">
 		#foreach( $column in ${entity.queryColumns})#if($column.stringJavaType)<if test="${column.propertyName} != null and '' neq ${column.propertyName}">
@@ -13,7 +13,16 @@
 		</if>
 		#end
 		#end</trim>
-</sql>
+</select>
+
+#set($j=0)
+<delete id="delete" parameterType="java.util.Map">
+<![CDATA[delete from ${entity.tableName} where #foreach( $column in ${entity.tableColumns}) #if (${column.primary}) #if ($j != 0)and #end ${column.columnName} in ]]> 
+<foreach item="${column.propertyName}" collection="${column.propertyName}" open="(" close=")" separator=",">
+<![CDATA[$H{${column.propertyName}}]]>
+</foreach> #set($j = $j + 1) #end #end
+
+</delete>
 	
 
 </mapper>
