--- a/src/main/resources/template/velocity/SqlMapIService.vm
+++ b/src/main/resources/template/velocity/SqlMapIService.vm
@@ -2,6 +2,7 @@
  * 
  */
 package ${serviceFullPackageName};
+#parse("template/velocity/fun.vm")
 
 import java.util.Map;
 import ${pagingPackageName}.Paging;
