--- a/src/main/resources/template/velocity/SpringMvcAction.vm
+++ b/src/main/resources/template/velocity/SpringMvcAction.vm
@@ -8,8 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import ${serviceFullPackageName}.${sqlMapIServiceJavaClassName};
 import ${baseCtrlPackageName}.BaseCtrl;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod.POST;
-import org.springframework.web.bind.annotation.RequestMethod.GET;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 import ${jsonResultPackageName}.JsonResult2;
@@ -17,7 +16,7 @@ import ${idataCollectionPackageName}.IDataCollection;
 import ${pojoFullPackageName}.${entity.entityBeanName};
 import ${pagingPackageName}.Paging;
 import ${businessExceptionPackageName}.BusinessException;
-import ${ierrorCodePackageName}.IErrorCode.UNKNOW_EXCEPTION;
+import ${ierrorCodePackageName}.IErrorCode;
 
 import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
@@ -163,7 +162,7 @@ public class ${springWebActionJavaClassName} extends BaseCtrl {
 			service.delete(#pks_call_argument(${entity.tableColumns}));
 			jr.setMsg("删除成功!");
 		}catch(BusinessException e){
-			jr.setStatus(UNKNOW_EXCEPTION);
+			jr.setStatus(IErrorCode.UNKNOW_EXCEPTION);
 			jr.setMsg(e.getMessage());
 		}catch(java.lang.Exception e){
 			jr.setStatus(IErrorCode.UNKNOW_EXCEPTION);
